More changes and finaliseing